# Vsp_to_qsp

./: AGENTS.md  CMakeLists.txt  ROS2_Offboard_Velocity_to_Attitude_Design.md  package.xml  plan.md
config/: offboard_velocity_to_attitude.params.yaml
launch/: offboard_velocity_to_attitude.launch.py
src/: velocity_to_attitude_node.cpp
